--- a/packages/datagovmy-ui/package.json
+++ b/packages/datagovmy-ui/package.json
@@ -129,6 +129,7 @@
     "@heroicons/react": "^2.0.11",
     "@nivo/core": "^0.79.0",
     "@nivo/waffle": "^0.80.0",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-slider": "^1.1.1",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.11.2",
