--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -28,3 +28,10 @@ MIXPANEL_PROJECT_ID=
 MIXPANEL_SA_USER=
 MIXPANEL_SA_SECRET=
 NEXT_PUBLIC_MIXPANEL_TOKEN=$MIXPANEL_TOKEN
+
+# Auth
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=
+# GitHub Oauth App
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
