--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.11",
     "@nivo/core": "^0.79.0",
     "@nivo/waffle": "^0.80.0",
+    "@octokit/rest": "^22.0.0",
     "@radix-ui/react-slider": "^1.1.1",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.8.5",
@@ -44,6 +45,7 @@
     "luxon": "^3.0.3",
     "mitt": "^3.0.1",
     "next": "^13.5.6",
+    "next-auth": "^4.24.11",
     "next-i18next": "^13.2.2",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^3.1.23",
