--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.11",
     "@nivo/core": "^0.79.0",
     "@nivo/waffle": "^0.80.0",
+    "@octokit/oauth-app": "^8.0.1",
     "@octokit/rest": "^22.0.0",
     "@radix-ui/react-slider": "^1.1.1",
     "@tanstack/match-sorter-utils": "^8.8.4",
