--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,7 @@
       "env": [
         "ANALYZE",
         "AUTH_TOKEN",
+        "S3_URL",
         "REVALIDATE_TOKEN",
         "NEXT_PUBLIC_GA_TAG",
         "NEXT_PUBLIC_API_URL",
