add skeleton, and integrate ai draft

--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,7 @@
         "REVALIDATE_TOKEN",
         "NEXT_PUBLIC_GA_TAG",
         "NEXT_PUBLIC_API_URL",
+        "NEXT_PUBLIC_AI_URL",
         "NEXT_PUBLIC_APP_URL",
         "NEXT_PUBLIC_APP_ENV",
         "NEXT_PUBLIC_AUTHORIZATION_TOKEN",
