--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -12,6 +12,7 @@
   ],
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
