Feat/dc gui (#595)
* add base dc gui page

* add gui basic step UI

* add link test function and API to test

* add form validation for step basic

* hide nav, add reset on gui step, base step 3

* feat(dc-gui): add github integrations (#592)

* Implement sign-in with github
* Add API endpoint POST /api/data-catalogue/open-pr

* wip: step catalogue charts

* catalogue GUI step 3 UI

* feat(dc-gui): UI components for github integration

* add missing fields and page interactions

* add step 3 input validation

* add visual validation indicator for step 3

* update step auth i18n keys

* feat(dc-gui): integrate publish flow

* publish i18n and use empty default state

* chore: sticky edit on step 3

* step3 validation & add markdown preview on edit

* fetch category on client

* add skeleton, and integrate ai draft

* chore: misc fixes

* fix: remove code after field was fixed

* add confirmation modal for AI draft action

---------

Co-authored-by: Daniel Zairin <danielzairink@gmail.com>

--- a/turbo.json
+++ b/turbo.json
@@ -7,15 +7,19 @@
       "env": [
         "ANALYZE",
         "AUTH_TOKEN",
+        "S3_URL",
         "REVALIDATE_TOKEN",
         "NEXT_PUBLIC_GA_TAG",
         "NEXT_PUBLIC_API_URL",
+        "NEXT_PUBLIC_AI_URL",
         "NEXT_PUBLIC_APP_URL",
         "NEXT_PUBLIC_APP_ENV",
         "NEXT_PUBLIC_AUTHORIZATION_TOKEN",
         "NEXT_PUBLIC_TILESERVER_URL",
         "NEXT_PUBLIC_TINYBIRD_TOKEN",
-        "NEXT_PUBLIC_TINYBIRD_URL"
+        "NEXT_PUBLIC_TINYBIRD_URL",
+        "GITHUB_CLIENT_ID",
+        "GITHUB_CLIENT_SECRET"
       ],
       "outputMode": "new-only",
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
