--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,10 +13,10 @@
   "sideEffects": false,
   "dependencies": {
     "@vercel/edge-config": "^0.2.1",
-    "axios": "^1.6.0",
+    "axios": "^1.12.2",
     "datagovmy-nextra": "*",
-    "next": "^13.5.6",
-    "nextra": "^2.6.2",
+    "next": "13",
+    "nextra": "^2.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
