--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "e2e:test": "turbo run e2e:test",
-    "prepare": "husky install",
+    "prepare": "husky",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "lint-staged": {
@@ -33,7 +33,7 @@
     "typescript": "^5.1.3"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=20.0.0"
   },
   "packageManager": "yarn@1.22.19"
 }
