--- a/packages/datagovmy-nextra/package.json
+++ b/packages/datagovmy-nextra/package.json
@@ -41,7 +41,7 @@
     "types:check": "tsc --noEmit"
   },
   "peerDependencies": {
-    "next": ">=13.4.2",
+    "next": "13",
     "nextra": "workspace:*",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
@@ -50,7 +50,7 @@
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.11",
     "@popperjs/core": "^2.11.6",
-    "axios": "^1.6.0",
+    "axios": "^1.12.2",
     "clsx": "^1.2.1",
     "flexsearch": "0.7.21",
     "focus-visible": "^5.2.0",
@@ -73,7 +73,7 @@
     "@vitejs/plugin-react": "^3.0.1",
     "concurrently": "^7.4.0",
     "jsdom": "^22.0.0",
-    "next": "^13.3.1",
+    "next": "13",
     "nextra": "workspace:*",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
