--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -8,6 +8,7 @@
       "@lib/*": ["lib/*"],
       "@hooks/*": ["hooks/*"],
       "@dashboards/*": ["dashboards/*"],
+      "@queries/*": ["queries/*"],
       "@misc/*": ["misc/*"],
       "@config/*": ["config/*"]
     }
